--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 JWT_SECRET = "72BfGsf9CLPukhUEx1By0OMsKX8Jw1WT"
 PORT = 3000
 MONGO_URL = "mongodb://localhost:27017/ChatApp"
+API_KEY = "AIzaSyBdNzktzL_FbXig4zIQMKSec-EdAe07-BI"
