--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.24.8",
     "@babel/node": "^7.24.8",
     "@babel/preset-env": "^7.24.8",
+    "@google/generative-ai": "^0.16.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
